# Scrum_C-_semesterproject

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  Anforderungs_nachweis.md  CMakeLists.txt  README.md  build.sh
assets/: CMakeLists.txt
assets/games/analogy/: questionnaire.json
assets/games/diagrams/: diagrams.json
assets/games/rows_of_numbers/: rows_of_numbers.json
extern_scripts/: fix_initialization_formatting.py
lib/: CMakeLists.txt
lib/abstract_game/: CMakeLists.txt  CsvStorage.cpp  CsvStorage.hpp  CsvWriter.cpp  CsvWriter.hpp  DataManager.cpp  DataManager.hpp  DataManagerFactory.cpp  DataManagerFactory.hpp  Game.cpp  Game.hpp  GameIDs.hpp  GameObject.cpp  GameObject.hpp  GameRunThrough.cpp  GameRunThrough.h  GameRunThrough.hpp  GameRunThroughCsvWriter.cpp  GameRunThroughCsvWriter.hpp  GameSession.cpp  GameSession.hpp  GameSessionManager.cpp  GameSessionManager.hpp  GameStats.cpp  GameStats.hpp  ResultModel.cpp  ResultModel.hpp  Session.cpp  Session.hpp
lib/commons/: CMakeLists.txt  Color.h  ColorHelper.cpp  ColorHelper.hpp  ColorTheme.cpp  ColorTheme.hpp  Colors.cpp  Colors.hpp  Coordinates.cpp  Coordinates.hpp  Font.h  Fonts.cpp  Fonts.h  Fonts.hpp  RandomPicker.cpp  RandomPicker.hpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  SoundPolice.cpp  SoundPolice.hpp  StyleManager.cpp  StyleManager.hpp  WindowConfig.cpp  WindowConfig.hpp
lib/csv/: CMakeLists.txt  CsvParser.cpp  CsvParser.hpp
lib/games/: CMakeLists.txt
lib/games/absurd_questions/: AbsurdQuestions.cpp  AbsurdQuestions.hpp  CMakeLists.txt
lib/games/aim_trainer/: AimTrainer.cpp  AimTrainer.hpp  Blob.cpp  Blob.hpp  CMakeLists.txt
lib/games/analogy/: Analogy.cpp  Analogy.hpp  CMakeLists.txt  questionnaire.json
lib/games/calc/: ArithmeticUtils.cpp  ArithmeticUtils.hpp  CMakeLists.txt  Calc.cpp  Calc.hpp  EquationBuilder.cpp  EquationBuilder.hpp  MathTask.cpp  MathTask.hpp  MathTaskFactory.cpp  MathTaskFactory.hpp  MathTaskType.hpp  SimpleMultiplicationTable.cpp  SimpleMultiplicationTable.hpp  Task.cpp  Task.hpp  TaskGenerator.cpp  TaskGenerator.hpp
lib/games/color_match/: CMakeLists.txt  ColorMatch.cpp  ColorMatch.hpp
lib/games/colortext/: CMakeLists.txt  ColorText.cpp  ColorText.hpp
lib/games/conclusions/: CMakeLists.txt  Conclusions.cpp  Conclusions.hpp  conclusions.json
lib/games/diagram/: CMakeLists.txt  DiagramAnalysis.cpp  DiagramAnalysis.hpp  DiagramHelper.cpp  DiagramHelper.hpp  DiagramQuestion.cpp  DiagramQuestion.hpp
lib/games/letter_salad/: Box.cpp  Box.hpp  CMakeLists.txt  Coordinates.cpp  Coordinates.hpp  LetterSalad.cpp  LetterSalad.hpp  Orientation.cpp  Orientation.hpp  WordTarget.cpp  WordTarget.hpp  letter_salad_words.json  letter_salad_words.txt
lib/games/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixGame.cpp  MatrixGame.hpp
lib/games/memory/: CMakeLists.txt  ImageManager.cpp  ImageManager.hpp  Memory.cpp  Memory.hpp  MemoryGameImageManager.cpp  MemoryGameImageManager.hpp  MemoryTile.cpp  MemoryTile.hpp  StressButton.cpp  StressButton.hpp
lib/games/reaction/: CMakeLists.txt  Reaction.cpp  Reaction.hpp
lib/games/remembering/: CMakeLists.txt  QuestionBank.cpp  QuestionBank.hpp  Remembering.cpp  Remembering.hpp
lib/games/rows_of_numbers/: CMakeLists.txt  RowsOfNumbers.cpp  RowsOfNumbers.h  RowsOfNumbers.hpp  Sequence.cpp  Sequence.hpp  rows_of_numbers.json
lib/games/rows_of_symbols/: CMakeLists.txt  RelativePointPosition.hpp  RowsOfSymbols.cpp  RowsOfSymbols.hpp  Symbol.cpp  Symbol.hpp  SymbolType.hpp
lib/games/sequence/: CMakeLists.txt  Sequence.cpp  Sequence.hpp
lib/games/simon_says/: SimonSays.cpp  SimonSays.hpp
lib/games/test/: CMakeLists.txt  TestGame.cpp  TestGame.hpp
lib/games/typeracer/: CMakeLists.txt  FireDepartmentAndPoliceTexts.cpp  FireDepartmentAndPoliceTexts.hpp  TypeRacer.cpp  TypeRacer.h  TypeRacer.hpp  fireDepartmentAndPoliceTexts.cpp  fireDepartmentAndPoliceTexts.h  fireDepartmentAndPoliceTexts.hpp
lib/logger/: CMakeLists.txt  LogType.hpp  Logger.cpp  Logger.hpp  QueueEntry.cpp  QueueEntry.hpp  QueueEntryType.cpp  QueueEntryType.hpp
lib/scene/: CMakeLists.txt  DashboardScene.cpp  DashboardScene.hpp  GameScene.cpp  GameScene.hpp  ResultScene.cpp  ResultScene.hpp  ResultsScene.cpp  ResultsScene.h  ResultsScene.hpp  Scene.cpp  Scene.hpp  SceneContainer.cpp  SceneContainer.hpp  SceneManager.cpp  SceneManager.hpp
lib/ui_elements/: CMakeLists.txt  Centered.cpp  Centered.hpp  Container.cpp  Container.hpp  InfoBox.cpp  InfoBox.h  InfoBox.hpp  Overlay.cpp  Overlay.hpp  StatisticsGameTable.cpp  StatisticsGameTable.hpp  TableContainer.cpp  TableContainer.h  TableContainer.hpp  TextCentered.cpp  TextCentered.hpp  Tile.cpp  Tile.h  Tile.hpp  Timer.cpp  Timer.hpp  UiElement.cpp  UiElement.hpp  Window.cpp  Window.hpp  Windows.cpp
lib/views/: CMakeLists.txt  Dashboard.cpp  Dashboard.hpp  Header.cpp  Header.hpp  Results.cpp  Results.h  Results.hpp  Statistics.cpp  Statistics.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  DashboardScene.cpp  DashboardScene.hpp  GameFactory.cpp  GameFactory.hpp  GameScene.cpp  GameScene.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneType.cpp  SceneType.hpp  TestScene.cpp  TestScene.hpp  main.cpp
src/db/: DbService.cpp  DbService.hpp
src/views/: CMakeLists.txt  Dashboard.hpp  Header.cpp  Header.hpp  Statistics.hpp  Tile.cpp  Tile.h
