add_subdirectory(calc)
add_subdirectory(reaction)
add_subdirectory(color_match)
add_subdirectory(matrix)
add_subdirectory(simon_says)
add_subdirectory(remembering)
add_subdirectory(letter_salad)
add_subdirectory(aim_trainer)
add_subdirectory(typeracer)
add_subdirectory(analogy)
add_subdirectory(rows_of_numbers)
add_subdirectory(rows_of_symbols)
add_subdirectory(conclusions)